[gd_scene load_steps=3 format=2]

[ext_resource path="res://PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://Silver-Kitchen-Knife-Transparent-Background.png" type="Texture" id=2]

[node name="PauseScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -74.0
margin_top = -59.0
margin_right = 2717.0
margin_bottom = 1605.0

[node name="Tint" type="ColorRect" parent="."]
margin_left = -69.0
margin_top = -59.0
margin_right = 2688.0
margin_bottom = 1581.0

[node name="Resume" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -10.0
margin_right = 32.0
margin_bottom = 10.0
text = "Resume"

[node name="Paused" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.5
margin_top = -70.0
margin_right = 32.5
margin_bottom = -56.0
text = "The Game"

[node name="Save" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = 41.0
margin_right = 41.5
margin_bottom = 61.0
text = "Save Game"

[node name="Load" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = 94.0
margin_right = 21.0
margin_bottom = 114.0
text = "Load"

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -155.0
margin_right = 20.0
margin_bottom = -135.0
text = "Quit"

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = ":)"

[node name="KnifePic" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -149.0
margin_right = 461.0
margin_bottom = 49.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="Volume" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = 198.0
margin_right = 24.0
margin_bottom = 212.0
text = "volume"

[node name="VolumeSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.5
margin_top = 222.0
margin_right = 112.5
margin_bottom = 238.0
min_value = -24.0
max_value = 12.0
value = 1.0

[node name="MusicChange" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 259.0
margin_right = 50.0
margin_bottom = 279.0
text = "Change Music"

[node name="DynamicLights" type="Button" parent="."]
margin_left = 10.0
margin_top = 566.0
margin_right = 120.0
margin_bottom = 586.0
text = "Dynamic Lights"

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="MusicChange" to="." method="_on_MusicChange_pressed"]
[connection signal="pressed" from="DynamicLights" to="." method="_on_DynamicLights_pressed"]
